--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
   <link rel="stylesheet" href="css/header/header.css" />
   <link rel="stylesheet" href="css/main/main.css" />
   <link rel="stylesheet" href="css/main/sw-banner.css" />
+  <link rel="stylesheet" href="css/main/sw-shortcut.css" />
   <link rel="stylesheet" href="css/main/sw-card.css" />
   <link rel="stylesheet" href="css/footer/footer.css" />
+  <link rel="stylesheet" href="css/footer/navbar.css" />
 
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/header.js" defer></script>
   <script src="js/swBanner.js" defer></script>
+  <script src="js/swShortcut.js" defer></script>
   <script src="js/swCard.js" defer></script>
   <script src="js/sideBanner.js" defer></script>
+  <script src="js/footer.js" defer></script>
  </head>
  <body>
   <div class="wrap">
@@ -105,14 +109,14 @@
         <span>안녕하세요!</span>
        </div>
 
-       <div class="btn">
+       <!-- <div class="btn">
         <a href="#">로그인</a>
-       </div>
+       </div> -->
 
-       <ul class="etc">
+       <!-- <ul class="etc">
         <li><a href="#">회원가입</a></li>
         <li><a href="#">인증센터</a></li>
-       </ul>
+       </ul> -->
       </div>
 
       <!-- 메인 배너 스와이퍼 -->
@@ -142,8 +146,11 @@
          </div>
          <div class="play-stop-btn">
           <!-- <a href="#">
-           <img src="images/main/homepage/slider_play.svg" alt="재생" />
-          </a> -->
+                      <img
+                        src="images/main/homepage/slider_play.svg"
+                        alt="재생"
+                      />
+                    </a> -->
          </div>
         </div>
        </div>
@@ -151,92 +158,108 @@
 
       <!-- 자주찾는 메뉴 모바일 -->
       <div class="shortcut-wrap-mb">
-       <h4>자주찾는 메뉴</h4>
+       <div class="swiper sw-shortcut">
+        <div class="swiper-wrapper">
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_1.svg"
+            alt="계약내용확인"
+           />
+           <span>계약내용<br />확인</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_2.svg"
+            alt="보험금청구"
+           />
+           <span>보험금<br />청구</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_3.svg"
+            alt="보험계약대출"
+           />
+           <span>보험계약<br />대출</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_4.svg"
+            alt="보험료납입"
+           />
+           <span>보험료<br />납입</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_5.svg"
+            alt="증명서발급"
+           />
+           <span>증명서<br />발급</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_6.svg"
+            alt="완전판매모니터링"
+           />
+           <span>완전판매<br />모니터링</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_7.svg"
+            alt="임시운전자특약"
+           />
+           <span>임시운전자<br />특약</span>
+          </a>
+         </div>
+         <div class="swiper-slide">
+          <a href="#">
+           <img
+            src="images/main/homepage/menu_shortcut_8.svg"
+            alt="필요서류안내"
+           />
+           <span>필요서류<br />안내</span>
+          </a>
+         </div>
+        </div>
+       </div>
+      </div>
+      <!-- 자동차 고장출동, 사고접수 모바일 -->
+      <div class="car-wrap-mb">
        <ul>
         <li>
          <a href="#">
           <img
-           src="images/main/homepage/menu_shortcut_1.svg"
-           alt="계약내용확인"
+           src="images/main/homepage/ico_emergency1.svg"
+           alt="자동차고장출동"
           />
-          <span>계약내용확인</span>
+          <span>자동차 고장출동</span>
          </a>
         </li>
         <li>
          <a href="#">
           <img
-           src="images/main/homepage/menu_shortcut_2.svg"
-           alt="보험금청구"
-          />
-          <span>보험금청구</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_3.svg"
-           alt="보험계약대출"
-          />
-          <span>보험계약대출</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_4.svg"
-           alt="보험료납입"
-          />
-          <span>보험료납입</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_5.svg"
-           alt="증명서발급"
-          />
-          <span>증명서발급</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_6.svg"
-           alt="완전판매모니터링"
-          />
-          <span>완전판매모니터링</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_7.svg"
-           alt="임시운전자특약"
-          />
-          <span>임시운전자특약</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_8.svg"
-           alt="필요서류안내"
-          />
-          <span>필요서류안내</span>
-         </a>
-        </li>
-        <li>
-         <a href="#">
-          <img
-           src="images/main/homepage/menu_shortcut_9.svg"
+           src="images/main/homepage/ico_emergency2.svg"
            alt="자동차사고접수"
           />
-          <span>자동차사고접수</span>
+          <span>자동차 사고접수</span>
          </a>
         </li>
        </ul>
       </div>
 
+      <!-- 많은 분들이 선택한 상품이에요 제품 영역 -->
       <div class="product-section">
        <h4>
         <span>많은 분들이 선택한 상품이에요</span>
@@ -354,7 +377,7 @@
        </div>
       </div>
 
-      <!-- 사이드 배너 카드 모바일 -->
+      <!-- 사이드 배너 모바일 -->
       <div class="side-banner-wrap-mb">
        <div class="side-banner">
         <a href="#">
@@ -406,6 +429,7 @@
        </div>
       </div>
 
+      <!-- 알려드려요 고객지원 영역 -->
       <div class="notice-customer-section">
        <div class="notice">
         <div class="notice-header">
@@ -482,7 +506,7 @@
            src="images/main/homepage/menu_shortcut_1.svg"
            alt="계약내용확인"
           />
-          <span>계약내용확인</span>
+          <span>계약내용<br />확인</span>
          </a>
         </li>
         <li>
@@ -491,7 +515,7 @@
            src="images/main/homepage/menu_shortcut_2.svg"
            alt="보험금청구"
           />
-          <span>보험금청구</span>
+          <span>보험금<br />청구</span>
          </a>
         </li>
         <li>
@@ -500,7 +524,7 @@
            src="images/main/homepage/menu_shortcut_3.svg"
            alt="보험계약대출"
           />
-          <span>보험계약대출</span>
+          <span>보험계약<br />대출</span>
          </a>
         </li>
         <li>
@@ -509,7 +533,7 @@
            src="images/main/homepage/menu_shortcut_4.svg"
            alt="보험료납입"
           />
-          <span>보험료납입</span>
+          <span>보험료<br />납입</span>
          </a>
         </li>
         <li>
@@ -518,7 +542,7 @@
            src="images/main/homepage/menu_shortcut_5.svg"
            alt="증명서발급"
           />
-          <span>증명서발급</span>
+          <span>증명서<br />발급</span>
          </a>
         </li>
         <li>
@@ -527,7 +551,7 @@
            src="images/main/homepage/menu_shortcut_6.svg"
            alt="완전판매모니터링"
           />
-          <span>완전판매모니터링</span>
+          <span>완전판매<br />모니터링</span>
          </a>
         </li>
         <li>
@@ -536,7 +560,7 @@
            src="images/main/homepage/menu_shortcut_7.svg"
            alt="임시운전자특약"
           />
-          <span>임시운전자특약</span>
+          <span>임시운전자<br />특약</span>
          </a>
         </li>
         <li>
@@ -545,7 +569,7 @@
            src="images/main/homepage/menu_shortcut_8.svg"
            alt="필요서류안내"
           />
-          <span>필요서류안내</span>
+          <span>필요서류<br />안내</span>
          </a>
         </li>
         <li>
@@ -554,13 +578,13 @@
            src="images/main/homepage/menu_shortcut_9.svg"
            alt="자동차사고접수"
           />
-          <span>자동차사고접수</span>
+          <span>자동차사고<br />접수</span>
          </a>
         </li>
        </ul>
       </div>
 
-      <!-- 사이드 배너 카드 -->
+      <!-- 사이드 배너 -->
       <div class="side-banner-wrap">
        <div class="side-banner">
         <a href="#">
@@ -618,85 +642,211 @@
    <!-- footer section -->
    <footer class="footer">
     <div class="footer-top">
-     <ul>
-      <li>
-       <a href="#">
-        <span>소비자보호</span>
-        <img src="images/common/ico-common-fold-arr.svg" alt="소비자보호" />
-       </a>
-       <ul class="submenu">
-        <li><a href="#">휴면보험금 출연 안내</a></li>
-        <li><a href="#">자동차 간접손해보험금 안내</a></li>
-        <li><a href="#">과납보험료 환급신청</a></li>
-        <li><a href="#">서민금융 1332</a></li>
-        <li><a href="#">자동차리콜센터</a></li>
-        <li><a href="#">신용정보활용체제공시</a></li>
-        <li><a href="#">전자금융거래 유의사항</a></li>
-        <li><a href="#">이메일 무단수집 거부</a></li>
-       </ul>
-      </li>
-      <li>
-       <a href="#">
-        <span>신고센터</span>
-        <img src="images/common/ico-common-fold-arr.svg" alt="신고센터" />
-       </a>
-       <ul class="submenu">
-        <li><a href="#">Comming Soon</a></li>
-       </ul>
-      </li>
-      <li>
-       <a href="#">
-        <span>해외법인</span>
-        <img src="images/common/ico-common-fold-arr.svg" alt="해외법인" />
-       </a>
-       <ul class="submenu">
-        <li><a href="#">Comming Soon</a></li>
-       </ul>
-      </li>
-      <li>
-       <a href="#">
-        <span>패밀리사이트</span>
-        <img src="images/common/ico-common-fold-arr.svg" alt="패밀리사이트" />
-       </a>
-       <ul class="submenu">
-        <li><a href="#">Comming Soon</a></li>
-       </ul>
-      </li>
-      <li>
-       <a href="#">
-        <span>삼성화재 SNS</span>
-        <img src="images/common/ico-common-fold-arr.svg" alt="삼성화재 SNS" />
-       </a>
-       <ul class="submenu">
-        <li><a href="#">Comming Soon</a></li>
-       </ul>
-      </li>
-     </ul>
+     <div class="inner">
+      <ul>
+       <li>
+        <a href="#">
+         <span>소비자보호</span>
+         <img src="images/common/ico-common-fold-arr.svg" alt="소비자보호" />
+        </a>
+        <ul class="submenu">
+         <li><a href="#">휴면보험금 출연 안내</a></li>
+         <li><a href="#">자동차 간접손해보험금 안내</a></li>
+         <li><a href="#">과납보험료 환급신청</a></li>
+         <li><a href="#">서민금융 1332</a></li>
+         <li><a href="#">자동차리콜센터</a></li>
+         <li><a href="#">신용정보활용체제공시</a></li>
+         <li><a href="#">전자금융거래 유의사항</a></li>
+         <li><a href="#">이메일 무단수집 거부</a></li>
+        </ul>
+       </li>
+       <li>
+        <a href="#">
+         <span>신고센터</span>
+         <img src="images/common/ico-common-fold-arr.svg" alt="신고센터" />
+        </a>
+        <ul class="submenu">
+         <li><a href="#">Comming Soon</a></li>
+        </ul>
+       </li>
+       <li>
+        <a href="#">
+         <span>해외법인</span>
+         <img src="images/common/ico-common-fold-arr.svg" alt="해외법인" />
+        </a>
+        <ul class="submenu">
+         <li><a href="#">Comming Soon</a></li>
+        </ul>
+       </li>
+       <li>
+        <a href="#">
+         <span>패밀리사이트</span>
+         <img src="images/common/ico-common-fold-arr.svg" alt="패밀리사이트" />
+        </a>
+        <ul class="submenu">
+         <li><a href="#">Comming Soon</a></li>
+        </ul>
+       </li>
+       <li>
+        <a href="#">
+         <span>삼성화재 SNS</span>
+         <img src="images/common/ico-common-fold-arr.svg" alt="삼성화재 SNS" />
+        </a>
+        <ul class="submenu">
+         <li><a href="#">Comming Soon</a></li>
+        </ul>
+       </li>
+      </ul>
+     </div>
     </div>
     <div class="footer-bottom">
-     <div class="policy">
-      <a href="#">상품공시</a>
-      <a href="#">보험가격공시</a>
-      <a href="#">보험금융상품등록부</a>
-      <a href="#">회원가입약관</a>
-      <a href="#">소비자포털</a>
-      <a href="#">개인정보관리책임자</a>
-      <a href="#">개인정보처리방침</a>
-      <a href="#">고객정보취급방침</a>
-     </div>
-     <div class="info">
-      <div class="info-top">
-       <a href="#">삼성화재해상보험주식회사</a>
-       <a href="#">삼성화재해상보험주식회사</a>
-       <a href="#">삼성화재해상보험주식회사</a>
-       <a href="#">삼성화재해상보험주식회사</a>
+     <div class="inner">
+      <div class="policy">
+       <a href="#">상품공시</a>
+       <a href="#">보험가격공시</a>
+       <a href="#">보험금융상품등록부</a>
+       <a href="#">회원가입약관</a>
+       <a href="#">소비자포털</a>
+       <a href="#">개인정보관리책임자</a>
+       <a href="#">개인정보처리방침</a>
+       <a href="#">고객정보취급방침</a>
       </div>
-     </div>
-     <div class="bt-logo-wrap">
-      <div class="bt-logo"></div>
+      <!-- 푸터 모바일 SNS 영역 -->
+      <div class="sns-wrap-mb">
+       <ul>
+        <li>
+         <a href="#">
+          <img src="images/common/footer-sns1.svg" alt="유튜브" />
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          <img src="images/common/footer-sns2.svg" alt="인스타그램" />
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          <img src="images/common/footer-sns3.svg" alt="페이스북" />
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          <img src="images/common/footer-sns4.svg" alt="네이버" />
+         </a>
+        </li>
+       </ul>
+      </div>
+      <!-- 푸터 모바일 정책 영역 -->
+      <div class="policy-wrap-mp">
+       <div class="policy-item"><a href="#">회사소개</a></div>
+       <div class="policy-item"><a href="#">IR</a></div>
+       <div class="policy-item"><a href="#">공시실</a></div>
+       <div class="policy-item"><a href="#">소비자포털</a></div>
+       <div class="policy-item"><a href="#">RC(보험설계사)</a></div>
+       <div class="policy-item-br"></div>
+       <div class="policy-item"><a href="#">개인정보처리방침</a></div>
+       <div class="policy-item"><a href="#">고객정보취급방침</a></div>
+       <div class="policy-item-br"></div>
+       <div class="policy-item"><a href="#">위치기반서비스이용약관</a></div>
+      </div>
+      <div class="info">
+       <div class="info-right">
+        <a href="#">
+         <img
+          src="images/common/ico-footer-tell.svg"
+          alt="삼성화재 업무별 콜센터 안내"
+         />
+         <span>삼성화재 업무별 콜센터 안내</span>
+        </a>
+       </div>
+       <div class="info-left">
+        <ul>
+         <li>삼성화재해상보험주식회사</li>
+         <li>대표이사 사장 이문화</li>
+         <li class="flex-full">서울특별시 서초구 서초대로 74길 14</li>
+         <li class="flex-full">사업자등록번호 202-81-45617</li>
+        </ul>
+        <div class="copyright">
+         <span>
+          © Samsung Fire & Marine Insurance Co., Ltd.
+          <br class="mb-only" />
+          All Rights Reserved.
+         </span>
+        </div>
+       </div>
+      </div>
+      <div class="footer-logo-wrap">
+       <div class="footer-logo">
+        <img src="images/common/footer-logo.svg" alt="하단로고" />
+       </div>
+       <div class="footer-mark">
+        <ul>
+         <li>
+          <a href="#">
+           <img
+            src="images/common/footer-mark1.png"
+            alt="국가고객만족도-NCSI"
+           />
+          </a>
+         </li>
+         <li>
+          <a href="#">
+           <img
+            src="images/common/footer-mark2.png"
+            alt="한국산업 고객만족도-KCSI"
+           />
+          </a>
+         </li>
+         <li>
+          <a href="#">
+           <img
+            src="images/common/footer-mark3.png"
+            alt="개인정보보호인증-ePRIVACY PLUS"
+           />
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
      </div>
     </div>
    </footer>
   </div>
+
+  <!-- 네비게이션 바 -->
+  <aside class="bt-navbar">
+   <div class="bt-navbar-bg">
+    <span class="round"></span>
+   </div>
+   <div class="bt-navbar-inner">
+    <ul>
+     <li>
+      <a href="#">
+       <p>홈</p>
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       <p>상품</p>
+      </a>
+     </li>
+     <li class="consultant">
+      <a href="#">
+       <p>가입상담</p>
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       <p>혜택</p>
+      </a>
+     </li>
+     <li>
+      <a href="#">
+       <p>마이</p>
+      </a>
+     </li>
+    </ul>
+   </div>
+  </aside>
  </body>
 </html>
